<resources>
    <string name="app_name">My Application</string>
    <string name="button">Button</string>
    <string name="calc">calc</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>

    <string name="_5">5</string>
    <string name="divis">/</string>

    <string name="minus">-</string>

    <string name="c">C</string>
    <string name="mc">MC</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="mr">MR</string>
    <string name="m">M+</string>
    <string name="ravno">=</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="_0">0</string>
    <string name="del">del</string>
</resources>