<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    app:layout_constraintWidth_default="wrap"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/_0"
            android:inputType="textPersonName"
            android:textAlignment="textEnd" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button36"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:background="@color/purple_700"
                    android:text="@string/c"
                    app:rippleColor="@color/teal_200" />

                <Button
                    android:id="@+id/button37"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/mc" />

                <Button
                    android:id="@+id/button38"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/mr" />

                <Button
                    android:id="@+id/button39"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/m" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button19"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:background="@color/teal_200"
                    android:text="@string/del" />

                <Button
                    android:id="@+id/button18"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/button17"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/div" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button23"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/button22"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/button21"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/_9" />

                <Button
                    android:id="@+id/button20"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/mult" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button28"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/button27"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/_5" />

                <Button
                    android:id="@+id/button26"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/_6" />

                <Button
                    android:id="@+id/button24"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/minus" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button32"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/button31"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/button30"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/_3" />

                <Button
                    android:id="@+id/button29"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:height="70dp"
                    android:text="@string/plus" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button33"
                android:layout_width="152dp"
                android:layout_height="70dp"
                android:layout_margin="6dp"
                android:height="70dp"
                android:background="@color/purple_200"
                android:text="@string/_0" />

            <Button
                android:id="@+id/button34"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="6dp"
                android:height="70dp"
                android:text="@string/point" />

            <Button
                android:id="@+id/button35"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="6dp"
                android:height="70dp"
                android:text="@string/ravno" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>